data/all_generated_tests/raw_wast_tests/br_StackCorruption_235.wast
;; 6. Use `br` instructions in a `loop` that conditionally skips to the loop start based on stack operands. Validate operand effects and ensure the stack's state is retained accurately. Verify correct handling of operand stack polymorphism, observing any inconsistencies in operand management.

(assert_invalid
  (module
    (func (param i32) (param i32) (result i32)
      (loop (result i32)
        (block (result i32)
          (br_if 0 (i32.eq (local.get 0) (i32.const 0)))
          (br_if 1 (i32.eq (local.get 1) (i32.const 0)))
        )
        (i32.add (local.get 0) (local.get 1))
      )
    )
  )
  "type mismatch"
)